# backend

./: Cargo.toml  Dockerfile
.github/workflows/: deploy.yaml
src/: errors.rs  lib.rs  main.rs  models.rs  settings.rs
src/api/: mod.rs  v1.rs
src/api/handlers/: auth.rs  mod.rs  posts.rs
src/api/middlewares/: json.rs  jwt.rs
