[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argon2 = "0.5.2"
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
axum = "0.7.3"
axum-aws-lambda = "0.6.0"
axum-macros = "0.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
lambda_http = "0.9.0"
password-hash = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.5.0", features = ["trace", "cors", "request-id"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
